Fixes #1245 - Distorted image ratio

--- a/IsraelHiking.Web/sources/scss/common.scss
+++ b/IsraelHiking.Web/sources/scss/common.scss
@@ -142,6 +142,8 @@ ngx-image-gallery .image {
 
 .img-responsive-full {
     width: 100%;
+    height: auto;
+    object-fit: contain;
 }
 
 .img-center {
